test_suite/tests/ui/fail_custom_bounds_missing_skip_type_params.stderr
error: Type parameter requires a `TypeInfo` bound, so either:
        - add it to `#[scale_info(bounds(T: TypeInfo))]`
        - skip it with `#[scale_info(skip_type_params(T))]`
 --> tests/ui/fail_custom_bounds_missing_skip_type_params.rs:7:10
  |
7 | struct A<T> {
  |          ^
